# mta-mask

./: .gitignore  LICENSE  README.md  generate_docs.py  pyproject.toml
config/: aliases.yml  sendq-mta.yml  users.yml
scripts/: install.sh  uninstall.sh
src/sendq_mta/: __init__.py  __main__.py
src/sendq_mta/auth/: authenticator.py  dkim.py  dmarc.py  spf.py
src/sendq_mta/cli/: main.py
src/sendq_mta/core/: config.py  management.py  metrics.py  rate_limiter.py  server.py
src/sendq_mta/dashboard/: app.py
src/sendq_mta/dashboard/templates/: index.html
src/sendq_mta/queue/: manager.py
src/sendq_mta/transport/: connection_pool.py  delivery.py
src/sendq_mta/utils/: logging_setup.py
systemd/: sendq-mta.service
tests/: test_auth.py  test_config.py  test_rate_limiter.py
